@@ -1,3 +1,11 @@
+20110106
+ - (djm) OpenBSD CVS Sync
+   - markus@cvs.openbsd.org 2010/12/08 22:46:03
+     [scp.1 scp.c]
+     add a new -3 option to scp: Copies between two remote hosts are
+     transferred through the local host.  Without this option the data
+     is copied directly between the two remote hosts. ok djm@ (bugzilla #1837)
+
 20110104
  - (djm) [configure.ac Makefile.in] Use mandoc as preferred manpage
    formatter if it is present, followed by nroff and groff respectively.
